--- a/app/src/main/res/layout/content_transaction_history.xml
+++ b/app/src/main/res/layout/content_transaction_history.xml
@@ -10,6 +10,6 @@
 
     <include
 
-        layout="@layout/layout_tab_common"/>
+        layout="@layout/layout_recycler"/>
 
 </android.support.constraint.ConstraintLayout>
