--- a/app/src/main/res/layout/layout_list_wallet_history.xml
+++ b/app/src/main/res/layout/layout_list_wallet_history.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/_10sdp">
+        android:layout_margin="@dimen/_4sdp">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="@dimen/_10sdp">
+            android:padding="@dimen/_5sdp">
 
 
             <ImageView
                 android:id="@+id/imageView36"
+                android:contentDescription="@string/app_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -30,50 +31,50 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_5sdp"
-                android:textSize="@dimen/_10sdp"
-                android:text="@string/ref_no"
                 android:fontFamily="@font/montserrat"
+                android:text="@string/ref_no"
+                android:gravity="start|center"
                 android:textColor="@color/light_text_color"
-                app:layout_constraintBottom_toTopOf="@+id/textView16"
+                android:textSize="@dimen/_10sdp"
+                app:layout_constraintBottom_toTopOf="@+id/txtRef"
                 app:layout_constraintStart_toEndOf="@+id/imageView36"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_chainStyle="spread_inside" />
 
             <com.app.l_pesa.common.CommonTextRegular
-                android:id="@+id/textView16"
+                android:id="@+id/txtRef"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_5sdp"
                 android:textSize="@dimen/_11sdp"
-                android:text="REF154665720334001"
                 android:fontFamily="@font/montserrat"
                 android:textColor="@color/dark_text_color"
                 android:layout_marginBottom="@dimen/_5sdp"
-                app:layout_constraintBottom_toTopOf="@+id/textView19"
+                app:layout_constraintBottom_toTopOf="@+id/txtCreateDate"
                 app:layout_constraintStart_toEndOf="@+id/imageView36"
                 app:layout_constraintTop_toBottomOf="@+id/textView15" />
 
             <com.app.l_pesa.common.CommonTextRegular
-                android:id="@+id/textView19"
+                android:id="@+id/txtCreateDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_5sdp"
-                android:text="Jan 05, 2019 06:00 AM"
                 android:fontFamily="@font/montserrat"
                 android:textSize="@dimen/_10sdp"
+                android:gravity="start|center"
                 android:drawableStart="@drawable/ic_calendar_icon"
                 android:drawablePadding="@dimen/_5sdp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/imageView36"
-                app:layout_constraintTop_toBottomOf="@+id/textView16" />
+                app:layout_constraintTop_toBottomOf="@+id/txtRef" />
 
             <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/textView20"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/_14sdp"
-                android:text="TZS 345 Cr"
                 android:textStyle="bold"
-                android:textColor="@color/colorPrimaryDark"
+                android:gravity="start|center"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
