--- a/app/src/main/res/layout/activity_lpk_savings.xml
+++ b/app/src/main/res/layout/activity_lpk_savings.xml
@@ -23,8 +23,8 @@
         <ImageView
             android:id="@+id/imgFilter"
             android:contentDescription="@string/app_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/_25sdp"
+            android:layout_height="@dimen/_22sdp"
             android:layout_gravity="end"
             android:src="@drawable/ic_filter"
             android:layout_marginEnd="@dimen/_12sdp"
