--- a/app/src/main/res/layout/layout_withdrawal_history.xml
+++ b/app/src/main/res/layout/layout_withdrawal_history.xml
@@ -47,13 +47,14 @@
 
             <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/txtStatus"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/_11sdp"
                 android:gravity="start|center"
                 android:drawablePadding="@dimen/_5sdp"
                 android:fontFamily="@font/montserrat"
                 android:textColor="@color/light_text_color"
+                app:layout_constraintEnd_toStartOf="@+id/view46"
                 app:layout_constraintBottom_toTopOf="@+id/txtReason"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txtCreateDate" />
