--- a/app/src/main/res/layout/activity_loan_payment_history.xml
+++ b/app/src/main/res/layout/activity_loan_payment_history.xml
@@ -18,6 +18,7 @@
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay"
             app:titleTextAppearance="@style/Toolbar.TitleText"
+            app:layout_scrollFlags="scroll|enterAlways|snap"
             />
 
     </android.support.design.widget.AppBarLayout>
