--- a/app/src/main/res/layout/layout_investment_history_list.xml
+++ b/app/src/main/res/layout/layout_investment_history_list.xml
@@ -33,10 +33,11 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/_1sdp"
             android:layout_marginTop="@dimen/_5sdp"
-            android:layout_marginBottom="@dimen/_5sdp"
+            android:layout_marginStart="@dimen/_5sdp"
+            android:layout_marginEnd="@dimen/_5sdp"
             android:background="@color/divider_color"
-            app:layout_constraintEnd_toStartOf="@id/txtDepositAmount"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/txtAmount"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtRef" />
 
@@ -52,34 +53,23 @@
             app:layout_constraintTop_toBottomOf="@+id/view"
             app:srcCompat="@drawable/ic_ref_no" />
 
-        <TextView
+        <com.app.l_pesa.common.CommonTextRegular
             android:id="@+id/txtAmount"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_2sdp"
             android:layout_marginEnd="@dimen/_2sdp"
             android:fontFamily="@font/montserrat"
-            android:textColor="@color/textColors"
-            android:textSize="@dimen/_11sdp"
+            android:textColor="@color/dark_text_color"
+            android:textSize="@dimen/_10sdp"
             android:gravity="start|center"
+            android:text=""
             app:layout_constraintEnd_toStartOf="@id/view4"
             app:layout_constraintBottom_toBottomOf="@+id/imageView2"
             app:layout_constraintStart_toEndOf="@+id/imageView2"
-            app:layout_constraintTop_toBottomOf="@+id/txtDepositAmount"
+            app:layout_constraintBottom_toTopOf="@+id/imageView3"
             app:layout_constraintTop_toTopOf="@+id/imageView2" />
 
-        <com.app.l_pesa.common.CommonTextRegular
-            android:id="@+id/txtDepositAmount"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_2sdp"
-            android:layout_marginEnd="@dimen/_2sdp"
-            android:gravity="start|center"
-            android:textColor="@color/textColors"
-            android:textSize="@dimen/_11sdp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/txtDuration"
-            app:layout_constraintEnd_toStartOf="@+id/view4"
-            app:layout_constraintStart_toEndOf="@+id/imageView2" />
 
         <ImageView
             android:id="@+id/imageView3"
@@ -94,7 +84,7 @@
             app:layout_constraintEnd_toStartOf="@id/txtDuration"
             app:srcCompat="@drawable/ic_calendar_icon" />
 
-        <TextView
+        <com.app.l_pesa.common.CommonTextRegular
             android:id="@+id/txtDuration"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -102,12 +92,13 @@
             android:layout_marginEnd="@dimen/_2sdp"
             android:fontFamily="@font/montserrat"
             android:textColor="@color/textColors"
-            android:textSize="@dimen/_11sdp"
+            android:textSize="@dimen/_10sdp"
             android:gravity="start|center"
+            android:text=""
             app:layout_constraintEnd_toStartOf="@id/view4"
             app:layout_constraintBottom_toBottomOf="@+id/imageView3"
             app:layout_constraintStart_toEndOf="@+id/imageView3"
-            app:layout_constraintTop_toBottomOf="@+id/txtDepositAmount"
+            app:layout_constraintTop_toBottomOf="@+id/txtAmount"
             app:layout_constraintTop_toTopOf="@+id/imageView3" />
 
         <ImageView
@@ -123,7 +114,7 @@
             app:layout_constraintEnd_toStartOf="@id/txtRate"
             app:srcCompat="@drawable/ic_current_credit_score" />
 
-        <TextView
+        <com.app.l_pesa.common.CommonTextRegular
             android:id="@+id/txtRate"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -132,7 +123,7 @@
             android:fontFamily="@font/montserrat"
             android:gravity="start|center"
             android:textColor="@color/textColors"
-            android:textSize="@dimen/_11sdp"
+            android:textSize="@dimen/_10sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageView4"
             app:layout_constraintBottom_toBottomOf="@+id/imageView4"
@@ -166,7 +157,7 @@
             app:srcCompat="@drawable/ic_ref_no" />
 
 
-        <TextView
+        <com.app.l_pesa.common.CommonTextRegular
             android:id="@+id/txtInterest"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -176,6 +167,7 @@
             android:textSize="@dimen/_10sdp"
             android:gravity="start|center"
             app:layout_constraintTop_toTopOf="@+id/imageView5"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
             app:layout_constraintStart_toEndOf="@+id/imageView5"
             app:layout_constraintEnd_toEndOf="parent"
 
@@ -185,7 +177,7 @@
             android:id="@+id/imageView6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_3sdp"
+            android:layout_marginStart="@dimen/_2sdp"
             android:contentDescription="@string/app_name"
             android:layout_marginTop="@dimen/_2sdp"
             app:layout_constraintStart_toEndOf="@id/view4"
@@ -194,11 +186,11 @@
             app:layout_constraintEnd_toStartOf="@id/txtMaturity"
             app:srcCompat="@drawable/ic_calendar_icon" />
 
-        <TextView
+        <com.app.l_pesa.common.CommonTextRegular
             android:id="@+id/txtMaturity"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_2sdp"
+            android:layout_marginStart="@dimen/_1sdp"
             android:fontFamily="@font/montserrat"
             android:gravity="start|center"
             android:textColor="@color/textColors"
@@ -270,18 +262,6 @@
             android:layout_marginBottom="@dimen/_3sdp"
             />
 
-        <com.app.l_pesa.common.CommonTextRegular
-            android:id="@+id/txtStatus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="invisible"
-            android:gravity="center|start"
-            android:textSize="@dimen/_11sdp"
-            app:layout_constraintTop_toTopOf="@+id/view"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/view4"
-            />
 
 
        <com.app.l_pesa.common.CommonTextRegular
