--- a/app/src/main/res/layout/layout_investment_history_list.xml
+++ b/app/src/main/res/layout/layout_investment_history_list.xml
@@ -19,8 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_5sdp"
             android:layout_marginTop="@dimen/_5sdp"
-            android:text="@string/ref_no"
-            android:textColor="@color/textColors"
+            android:textColor="@color/dark_text_color"
             android:textSize="@dimen/_11sdp"
             app:layout_constraintBottom_toTopOf="@+id/view"
             app:layout_constraintHorizontal_bias="1.0"
